update transaction
